crates/hydracache-db/tests/policy/fail_prepared_duplicate_option.stderr
error: duplicate prepared_query_policy key option
 --> tests/policy/fail_prepared_duplicate_option.rs:6:9
  |
6 |         key = "two",
  |         ^^^
