crates/hydracache-db/tests/policy/fail_prepared_duplicate_option.rs
use hydracache_db::prepared_query_policy;

fn main() {
    let _policy = prepared_query_policy!(
        key = "one",
        key = "two",
    );
}
